--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,14 @@
 
 
 
-.gridcomponent{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 15px;
-}
+
 
 .card {
-  display: flex;
-  width: 100%;
-  max-width: 450px; 
-  height: 350px;     
-  border: 1px solid #db6161;
+  padding: 1rem;
+  background: white;
   border-radius: 8px;
-  overflow: hidden;
-  margin: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
-
 .card-info{
   flex: 1;
   padding-left: 5px;
@@ -80,6 +71,57 @@
     transform: rotate(360deg);
   }
 } */
+/* header section responsive for all devices */
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+/* On mobile: stack in column */
+@media (max-width: 600px) {
+  .header-container {
+    flex-direction: column-reverse;
+    align-items: flex-center;
+  }
+
+  .search-box {
+    width: 100% !important;
+  }
+}
+
+
+/* responsive for all devices start */
+.card-grid {
+  display: grid;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+/* Mobile: 1 column */
+@media (max-width: 600px) {
+  .card-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Tablet: 2 columns */
+@media (min-width: 601px) and (max-width: 900px) {
+  .card-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Desktop: 3 columns or more */
+@media (min-width: 901px) {
+  .card-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
 
 
